Bump up bottom-nav z-index fix form on dark mode

--- a/_includes/assets/css/main.css
+++ b/_includes/assets/css/main.css
@@ -565,6 +565,7 @@ section {
   left: 0;
   width: 100%;
   height: 3rem;
+  z-index: 10;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -729,6 +730,16 @@ form[name="contact"] button {
   color: #F3F3F3;
 }
 
+@media (prefers-color-scheme: dark) {
+  form[name="contact"] input, form[name="contact"] textarea {
+    border: 2px #F3F3F3 solid;
+  }
+  form[name="contact"] button {
+    background: #F3F3F3;
+    color: #151515;
+  }
+}
+
 .filter {
   color: #151515;
   border: 2px solid #151515;
@@ -744,6 +755,24 @@ form[name="contact"] button {
   padding: 0.5em 1em;
   -webkit-transition: color 0.2s ease-out, background-color 0.2s ease-out;
   transition: color 0.2s ease-out, background-color 0.2s ease-out;
+}
+
+@media (prefers-color-scheme: dark) {
+  .filter {
+    color: #F3F3F3;
+    border: 2px solid #F3F3F3;
+    padding: 0.5em 1em;
+    -webkit-transition: color 0.2s ease-in, background-color 0.2s ease-in;
+    transition: color 0.2s ease-in, background-color 0.2s ease-in;
+  }
+  .filter.active {
+    background: #F3F3F3;
+    color: #151515;
+    border: 2px solid #151515;
+    padding: 0.5em 1em;
+    -webkit-transition: color 0.2s ease-out, background-color 0.2s ease-out;
+    transition: color 0.2s ease-out, background-color 0.2s ease-out;
+  }
 }
 
 .card {
