--- a/scss/components/_bottom-nav.scss
+++ b/scss/components/_bottom-nav.scss
@@ -4,6 +4,7 @@
     left: 0;
     width: 100%;
     height: 3rem;
+    z-index: 10;
 
     display: flex;
     flex-direction: row;
