--- a/scss/components/_filter.scss
+++ b/scss/components/_filter.scss
@@ -14,3 +14,23 @@
 
     }
 }
+
+//dark screens
+@media (prefers-color-scheme: dark) {
+    .filter {
+        color: $color-white;
+        border: 2px solid $color-white;
+        padding: 0.5em 1em;
+        transition: color 0.2s ease-in, background-color 0.2s ease-in;
+
+
+        &.active {
+            background: $color-white;
+            color: $color-black;
+            border: 2px solid $color-black;
+            padding: 0.5em 1em;
+            transition: color 0.2s ease-out, background-color 0.2s ease-out;
+
+        }
+    }
+}
